--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "react": "^16.4.0",
     "react-bootstrap": "^0.32.1",
