--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "jquery": "^3.3.1",
     "react": "^16.4.0",
     "react-bootstrap": "^0.32.1",
+    "react-buttons": "0.0.11",
     "react-checkbox-group": "^4.0.1",
     "react-dom": "^16.4.0",
     "react-router-dom": "^4.2.2",
