--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-checkbox-group": "^4.0.1",
     "react-dom": "^16.4.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "sweetalert": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
